# phoenix

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  business_guide.md  check_pdf.py  makefile  ner_usage_example.py  program.py  prompt-tuning.skill  pyproject.toml  simple_ner_demo.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: python-package.yml
docs/: CHANGELOG.md  agent_code_tools_setup.md  agent_setup_guide.md  agentic_extract_api_guide.md  agentic_extract_cli.md  agentic_extract_guide.md  agentic_extract_workspace_cleanup_plan.md  agentscope_agent_design.md  agentscope_agent_overview.md  agentscope_tool_guide.md  canonical_docjson_v1.md  code_executor_usage.md  config_reader_usage.md  data_issues.md  development_summary.md  evaluation_engine_usage.md  evaluator-refactor-plan.md  evaluator_api_guide.md  evaluator_usage.md  extract_dev_design.md  extract_dev_guide.md  extraction_plan.md  known_limitations.md  notes.md  project-rules.md  quickstart.md  refactor_plan_archived.md  reflection_methodology.md  release_process.md  simple_workflow_usage.md  simple_workflow_返回格式标准.md  standard_set_local_storage.md  system-design.md  test_issues.md  tool_tree_sitter_cli.md  unlabeled_extraction_spec.md  workspace_quick_flow.md  xdev_docjson_toolhub_refactor_plan.md  xdev_guide.md
docs/features/: b2u_hierarchy.md  cli_dependencies.md  code_agent_feature.md  vlm_tools.md  (+15 more)
examples/: extract.py  extract_GDDH_JZRQ_89p.py  extract_RSBD_86p.py  extract_YAB_93p.py  extract_raw.py  extract_raw_GDDH.py  extract_raw_GDDH_Chapter.py  extract_raw_YAB.py  extract_raw_YJYB.py  optimize_agent_demo.py  tagged_format_demo.py  tool_calls_and_messages_demo.py
scripts/: agentic_batch.sh  eval_img_workspaces.sh  install.sh  prepare_docjson.py  prepare_workspace.py  run_agentic_extract_api.py  run_agentic_extract_auto_api.py  run_extract_to_excel.py  run_img_agents.sh
src/: tree_sitter_cli.py
tests/: README.md  conftest.py  test_extract.py  test_pyproject_metadata.py
(+225 files in other folders)
